@@ -1,3 +1,8 @@
+2015-04-22  Jon Turney  <jon.turney@dronecode.org.uk>
+
+	* windows-nat.c (windows_continue): Report an error if
+	ContinueDebugEvent() fails.
+
 2015-04-16  Jon Turney  <jon.turney@dronecode.org.uk>
 
 	* windows-nat.c (windows_resume): Fix misspelling in debug output.
